--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ body, html {
 }
 </style>
 </head>
-<body>
+<body class="bg">
 
-<div class="bg"></div>
+<div></div>
 
 <p>I f you want contact me send me a e-mail to yonhir@hotmail.com.</p>
 
