--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body, html {
   height: 100%;
   margin: 0;
