--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@ body, html {
 
 canvas {
   display:block;
+  height: 100%;
 }
 </style>
 </head>
 <body class="bg">
-
-<canvas id="c">
 <p>I f you want contact me send me a e-mail to yonhir@hotmail.com.</p>
-</canvas>
+<canvas id="matrix"></canvas>
 <script type="text/javascript">
 // geting canvas by Boujjou Achraf
-var c = document.getElementById("c");
+var c = document.getElementById("matrix");
 var ctx = c.getContext("2d");
 
 //making the canvas full screen
