--- a/index.html
+++ b/index.html
@@ -6,9 +6,62 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg">
-<script src="scripts.js"></script>
+
 <canvas id="matrix">
 <p class="contact">To contact me, Send me a e-mail to yonhir@hotmail.com.</p>
 </canvas>
+<script type="text/javascript">
+// geting canvas by Boujjou Achraf
+var canvas_object = document.getElementById("matrix");
+var ctx = canvas_object.getContext("2d");
+
+//making the canvas full screen
+canvas_object.height = window.innerHeight;
+canvas_object.width = window.innerWidth;
+
+//chinese characters - taken from the unicode charset
+var matrix = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789@#$%^&*()*&^%+-/~{[|`]}";
+//converting the string into an array of single characters
+matrix = matrix.split("");
+
+var font_size = 10;
+var columns = canvas_object.width/font_size; //number of columns for the rain
+//an array of drops - one per column
+var drops = [];
+//x below is the x coordinate
+//1 = y co-ordinate of the drop(same for every drop initially)
+for(var x = 0; x < columns; x++)
+    drops[x] = 1; 
+
+//drawing the characters
+function draw()
+{
+    //Black BG for the canvas
+    //translucent BG to show trail
+    ctx.fillStyle = "rgba(0, 0, 0, 0.04)";
+    ctx.fillRect(0, 0, canvas_object.width, canvas_object.height);
+
+    ctx.fillStyle = "#00cc00";//green text
+    ctx.font = font_size + "px arial";
+    //looping over drops
+    for(var i = 0; i < drops.length; i++)
+    {
+        //a random chinese character to print
+        var text = matrix[Math.floor(Math.random()*matrix.length)];
+        //x = i*font_size, y = value of drops[i]*font_size
+        ctx.fillText(text, i*font_size, drops[i]*font_size);
+
+        //sending the drop back to the top randomly after it has crossed the screen
+        //adding a randomness to the reset to make the drops scattered on the Y axis
+        if(drops[i]*font_size > canvas_object.height && Math.random() > 0.975)
+            drops[i] = 0;
+
+        //incrementing Y coordinate
+        drops[i]++;
+    }
+}
+
+setInterval(draw, 80);
+</script>
 </body>
 </html>
