--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p class="contact">To contact me, Send me a e-mail to yonhir@hotmail.com.</p>
 </canvas>
 <script type="text/javascript">
-// geting canvas by Boujjou Achraf
+// geting canvas
 var canvas_object = document.getElementById("matrix");
 var ctx = canvas_object.getContext("2d");
 
